--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
-    <string name="app_name">Assignment1</string>
+    <string name="app_name" translatable="false">Assignment1</string>
     <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\’m a button</string>
+    <string name="login">login</string>
+    <string name="password">password</string>
+    <string name="login_hint">login name</string>
+    <string name="switch_text">What does this do?</string>
+    <string name="radio_text">RadioButton</string>
+    <string name="checkBox_text">CheckBox</string>
 </resources>
