--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -9,4 +9,9 @@
     <string name="switch_text">இது என்ன செய்கிறது?</string>
     <string name="radio_text">ரேடியோ பட்டன்</string>
     <string name="checkBox_text">தேர்வுப்பெட்டி</string>
+    <string name="preference_file_key" />
+    <string name="dialog_message">நீங்கள் செயல்பாட்டை முடிக்க விரும்புகிறீர்களா?</string>
+    <string name="dialog_title">செயல்பாட்டை முடிக்கவும்</string>
+    <string name="ok">ஆம்</string>
+    <string name="cancel">இல்லை</string>
 </resources>
