--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,13 @@
     <string name="switch_text">What does this do?</string>
     <string name="radio_text">RadioButton</string>
     <string name="checkBox_text">CheckBox</string>
-    <string name="preference_file_key" />
+    <string name="preference_file_key" translatable="false" />
     <string name="dialog_message">Do you want to finish the activity?</string>
     <string name="dialog_title">Finish Activity</string>
     <string name="ok">Yes</string>
     <string name="cancel">No</string>
+    <string name="start_chat">Start Chat</string>
+    <string name="message_text">New Text</string>
+    <string name="send">Send</string>
 
 </resources>
