--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -17,4 +17,13 @@
     <string name="start_chat">அரட்டை தொடங்கவும்</string>
     <string name="message_text">புதிய உரை</string>
     <string name="send">அனுப்பு</string>
+    <string name="title_activity_test_toolbar">TestToolbar</string>
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="start_toolbar">Test Toolbar</string>
+    <string name="dialog_text">Do you want to go back?</string>
 </resources>
