--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,14 @@
     <string name="start_chat">Start Chat</string>
     <string name="message_text">New Text</string>
     <string name="send">Send</string>
+    <string name="title_activity_test_toolbar">TestToolbar</string>
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="start_toolbar">Test Toolbar</string>
+    <string name="dialog_text">Do you want to go back?</string>
 
 </resources>
