--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -15,7 +15,8 @@
     <string name="ok">ஆம்</string>
     <string name="cancel">இல்லை</string>
     <string name="start_chat">அரட்டை தொடங்கவும்</string>
-    <string name="message_text">புதிய உரை</string>
+    <string name="message_title">புதிய உரை</string>
+    <string name="message_text">புதிய உரையை உள்ளிடவும்.</string>
     <string name="send">அனுப்பு</string>
     <string name="title_activity_test_toolbar">TestToolbar</string>
     <string name="first_fragment_label">First Fragment</string>
