--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -23,8 +23,8 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="start_toolbar">Test Toolbar</string>
-    <string name="dialog_text">Do you want to go back?</string>
+    <string name="hello_first_fragment">வணக்கம் முதல் துண்டு</string>
+    <string name="hello_second_fragment">வணக்கம் இரண்டாவது துண்டு</string>
+    <string name="start_toolbar">சோதனை கருவிப்பட்டி</string>
+    <string name="dialog_text">நீங்கள் திரும்பிச் செல்ல விரும்புகிறீர்களா?</string>
 </resources>
