--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -18,9 +18,7 @@
     <string name="message_title">புதிய உரை</string>
     <string name="message_text">புதிய உரையை உள்ளிடவும்.</string>
     <string name="send">அனுப்பு</string>
-    <string name="title_activity_test_toolbar">TestToolbar</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="title_activity_test_toolbar">சோதனை கருவிப்பட்டி</string>
     <string name="start_toolbar">சோதனை கருவிப்பட்டி</string>
     <string name="dialog_text">நீங்கள் திரும்பிச் செல்ல விரும்புகிறீர்களா?</string>
 </resources>
