--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -22,10 +22,13 @@
     <string name="start_toolbar">சோதனை கருவிப்பட்டி</string>
     <string name="dialog_text">நீங்கள் திரும்பிச் செல்ல விரும்புகிறீர்களா?</string>
     <string name="weather_text">வானிலை முன்னறிவிப்பு</string>
-    <string name="city">City</string>
-    <string name="temp">temp</string>
-    <string name="min">min</string>
-    <string name="max">max</string>
+    <string name="city">நகரம்</string>
+    <string name="temp">வெப்ப நிலை</string>
+    <string name="min">குறைந்தபட்ச</string>
+    <string name="max">அதிகபட்ச</string>
+    <string name="current_temperature">தற்போதைய வெப்பநிலை:</string>
+    <string name="min_temperature">குறைந்தபட்ச வெப்பநிலை:</string>
+    <string name="max_temperature">அதிகபட்ச வெப்பநிலை:</string>
     <string-array name="cities">
         <item>Abbotsford</item>
         <item>Alert</item>
